@startuml
'https://plantuml.com/class-diagram

class Main
{
+public static void main(String [] args)
}

Main <|-- getData
getData <|-- Employee
getData <|-- getLengths

class Employee {
+private final String lastN
+private final String firstN
+private final String salary

+public String getLastN()
+public String getFirstN()
+public String Salary()

}

class getData {
+public void dataSalaries(File inputFile)
+public String printChart(List<Employee> list)
}

class getLengths{
+public int getLongestFN(List<Employee> dataSalaries)
+public int getLongestLN(List<Employee> dataSalaries)
+public int getLongestSAL(List<Employee> dataSalaries)
}

@enduml